# CineAIStudio

./: .dockerignore  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  404.html  AI_ARCHITECTURE.md  ARCHITECTURE.md  ARCHITECTURE_UPGRADE.html  CHANGELOG.md  CODE-AUDIT-REPORT.md  CONTRIBUTING.md  CORE_FEATURES_UPGRADE_PLAN.md  CineAIStudio_PRD_Technical_Analysis.md  DEVELOPER.md  DEVELOPMENT_EXECUTION_PLAN.md  DOCS_OPTIMIZATION_SUMMARY.md  Dockerfile  Dockerfile.cuda  FINAL_PROJECT_SUMMARY.md  FULL_INSTALL.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_ROADMAP.md  INSTALL.md  MARKET_ANALYSIS.md  MODERN_UI_UPGRADE_REPORT.md  Makefile  NATIVE-LLM-INTEGRATION.md  NEW_FEATURES.md  OPTIMIZATION.md  PLAN.md  PROJECT_PLAN.md  PROJECT_PLAN_v3.md  PROJECT_REFACTOR_PLAN.md  README.html  README.md  REFACTOR-PLAN.md  REFACTOR_COMPLETION_REPORT.md  REFACTOR_PLAN.md  RELEASE.md  (+46 more)
.claude/: index.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-release.yml  build-release.yml  build.yml  ci.yml  deploy-docs.yml  deploy-pages.yml  deploy-vercel.yml  docs.yml  pr-check.yml  release-build.yml  release.yml  test.yml  validate.yml
ai/: MODEL_UPDATES_2026_02.md
app/: __init__.py  application_launcher.py  main.py
app/agents/: __init__.py  agent_manager.py  base_agent.py  colorist_agent.py  director_agent.py  editor_agent.py  llm_client.py  reviewer_agent.py  sound_agent.py  task_scheduler.py  vfx_agent.py
app/ai/: __init__.py  ai_content_analyzer.py  ai_editing_assistant.py  ai_manager.py  ai_scene_detector.py  ai_subtitle_generator.py  content_generator.py  content_recommender.py  enhanced_ai_manager.py  object_tracker.py  ollama_manager.py  optimized_ai_manager.py  scene_detector.py
app/api/: main.py
app/audio/: __init__.py  audio_enhancer.py
app/cli/: main.py
app/cloud/: cloud_renderer.py
app/config/: __init__.py  api_key_manager.py  config.py  defaults.py  settings_manager.py
app/core/: __init__.py  ai_video_engine.py  application.py  application_config.py  async_bridge.py  audio_engine.py  audio_integration.py  auto_save.py  cache_manager.py  clip_manager.py  cloud_storage_config.py  color_grading_engine.py  color_science.py  config_manager.py  draft_exporter.py  effects_system.py  error_handler.py  error_manager.py  event_bus.py  event_system.py  exceptions.py  export_integration.py  gpu_parallel_processor.py  hardware_acceleration.py  hdr_processing_engine.py  icon_manager.py  intelligent_editing_engine.py  keyframe_system.py  lazy_loader.py  logger.py  lut_manager.py  project.py  (+28 more)
assets/: ARCHITECTURE_UPGRADE.md.BKF9VT7K.js  ARCHITECTURE_UPGRADE.md.BKF9VT7K.lean.js  ARCHITECTURE_UPGRADE.md.BNde7ayA.js  ARCHITECTURE_UPGRADE.md.BNde7ayA.lean.js  ARCHITECTURE_UPGRADE.md.Bx_LelGb.js  ARCHITECTURE_UPGRADE.md.Bx_LelGb.lean.js  README.md.BDVEwApd.js  README.md.BDVEwApd.lean.js  README.md.BGSuFx3a.js  README.md.BGSuFx3a.lean.js  README.md.BIrdLbFt.js  README.md.BIrdLbFt.lean.js  README.md.C5RZtnLt.js  README.md.C5RZtnLt.lean.js  README.md.CZUqgY8B.js  README.md.CZUqgY8B.lean.js  README.md.CdRnA773.js  README.md.CdRnA773.lean.js  README.md.Ce4PyD-6.js  README.md.Ce4PyD-6.lean.js  README.md.DOIfnE9b.js  README.md.DOIfnE9b.lean.js  README.md.DcXH4X6n.js  README.md.DcXH4X6n.lean.js  README.md.DctBQjRf.js  README.md.DctBQjRf.lean.js  README.md.DemmHilj.js  README.md.DemmHilj.lean.js  README.md.DyNC8muW.js  README.md.YCiNPFVT.js  README.md.YCiNPFVT.lean.js  README.md.dI19muRw.js  README.md.dI19muRw.lean.js  README.md.pUUGKuif.js  README.md.pUUGKuif.lean.js  TROUBLESHOOTING.md.BBM4MbIt.js  TROUBLESHOOTING.md.BBM4MbIt.lean.js  TROUBLESHOOTING.md.BDidBvy6.js  TROUBLESHOOTING.md.BDidBvy6.lean.js  TROUBLESHOOTING.md.BZ8N_GdB.js  (+632 more)
cine-flow/: .env.example  .mypy.ini  README.md
config/: app_config.yaml  llm.yaml
docs/: 404.html  AI_VIDEO_GUIDE.md  API.md  ARCHITECTURE.md  ARCHITECTURE_UPGRADE.md  BRANCHES.md  CHANGELOG.md  GROWTH_STRATEGY.md  INDEX.md  MODERN_UI_GUIDE.md  MODULE_GUIDE.md  README.html  README.md  README_EN.md  REORGANIZATION_SUMMARY.md  TROUBLESHOOTING.html  TROUBLESHOOTING.md  UI_DESIGN.md  VERSION_ANALYSIS.md  _coverpage.md  ai-models.html  ai-models.md  architecture.html  architecture.md  config.html  config.md  contributing.html  contributing.md  faq.html  faq.md  features.html  features.md  getting-started.html  getting-started.md  hashmap.json  index.html  index.md  model-updates.html  model-updates.md  naming-conventions.md  (+6 more)
examples/: create_viral_video.py  demo_clip_pipeline.py  enhanced_video_vision.py  full_demo.py  local_models.py  quick_start.py  quick_vision.py  vision_analysis.py  voice_enhancement.py  workflow_example.py
guide/: ai-configuration.html  ai-video-guide.html  batch-processing.html  exporting.html  getting-started.html  installation.html  interface.html  plugin-development.html  quick-start.html  troubleshooting.html
memory/: 2025-01-20.md
scripts/: add_copyright.py  build.py  check_dataclass.py  check_version.py  compare_versions.py  docker_entrypoint.sh  macOS_migration.py  migrate_to_pyside6.py  rename_files.py  rename_project.py  switch_version.py
tests/: __init__.py  ai_service_coordinator_test.py  conftest.py  minimal_test.py  simple_test.py  test_ai_service_manager.py  test_ai_services.py  test_application.py  test_base_exporter.py  test_beat_detector.py  test_benchmark.py  test_cache_manager.py  test_caption_generator.py  test_commentary_maker.py  test_config_manager.py  test_core_features.py  test_davinci_exporter.py  test_direct_video_exporter.py  test_enhanced_interactions_simple.py  test_enhanced_ui.py  test_error_handler.py  test_event_bus.py  test_event_handler.py  test_exceptions.py  test_export_system.py  test_exporters.py  test_ffmpeg_tool.py  test_finalcut_exporter.py  test_highlight_detector.py  test_icon_manager.py  test_integration.py  test_jianying_exporter.py  test_llm_base.py  test_llm_cache.py  test_llm_manager.py  test_llm_providers.py  test_logger.py  test_macOS_theme_manager.py  test_mashup_maker.py  test_media_service.py  (+41 more)
(+1027 files in other folders)
