[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipflow-ai"
version = "3.0.0"
description = "ClipFlow - Professional Video Creation with AI"
license = {text = "MIT"}
authors = [
    {name = "Agions", email = "agions@qq.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
]
keywords = ["video", "editing", "AI", "multimedia", "PyQt6"]
requires-python = ">=3.9"
dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-Qt6>=6.6.0",
    "PyQt6-sip>=13.6.0",
    "opencv-python>=4.8.1",
    "numpy>=1.26.0",
    "pillow>=10.1.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "ffmpeg-python==0.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "psutil>=5.9.6",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
clipflow-ai = "app.main:main"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = "**/*.py"
exclude = [
    "build",
    "dist",
    "venv",
    ".venv",
    "tests"
]

[[tool.mypy.overrides]]
module = "PyQt6.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psutil.*"
ignore_missing_imports = true