[metadata]
name = clipflow-ai
version = 2.0.0-rc.1
description = ClipFlow - Professional Video Creation with AI
author = Agions
author_email = agions@qq.com
url = https://github.com/Agions/cine-flow

classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: Qt
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Non-Linear Editor

[options]
python_requires = >=3.9
packages = find:
install_requires =
    PyQt6>=6.6.0
    PyQt6-Qt6>=6.6.0
    PyQt6-sip>=13.6.0
    opencv-python>=4.8.1
    numpy>=1.26.0
    pillow>=10.1.0
    requests>=2.31.0
    ffmpeg-python==0.2.0
    python-dotenv>=1.0.0
    psutil>=5.9.6

[options.packages.find]
where = .
include = app*

[options.entry_points]
console_scripts =
    clipflow = app.main:main

[bdist_wheel]
universal = 0